css, subscribe 부분 수정

--- a/css/container.css
+++ b/css/container.css
@@ -9,7 +9,15 @@
     display: flex;
 }
 
+.center{
+    justify-content: center;
+    align-items: center;
+}
 
+.left{
+    justify-content: center;
+    align-items: left;
+}
 
 .grid {
     display: grid;
