--- a/css/styles.css
+++ b/css/styles.css
@@ -97,28 +97,28 @@ nav a:not([class^="btn"]) {
 }
 
 /* 히어로 섹션 */
-#hero {
+#intro {
     padding: 2rem 0;
     overflow-y: hidden;
     background-color: #F2E9D8;
     max-height: 800px;
 }
 
-.hero-content {
+.intro-content {
     flex: 1.05;
     gap: 1.5rem; /* h1과 p 사이의 간격 */
     padding-right: 2rem; /* 이미지와의 간격 설정 */
     padding-bottom: 100px;
 }
 
-.hero-content h1 {
+.intro-content h1 {
     font-weight: 700;
     font-size: 48px;
     line-height: 60px;
     max-width: 100%; /* 최대 너비를 100%로 설정 */
 }
 
-.hero-content p {
+.intro-content p {
     font-weight: 400;
     font-size: 16px;
     line-height: 20px;
@@ -126,18 +126,18 @@ nav a:not([class^="btn"]) {
     max-height: 86px;
 }
 
-.hero-image {
+.intro-image {
     flex: 1;
     max-width: 415px;
     padding-top: 100px;
 }
 
-.hero-image img {
+.intro-image img {
     max-width: 100%;
     height: auto;
 }
 
-.hero-grid {
+.intro-grid {
     display: grid;
     justify-content: space-between;
     grid-template-columns: 2fr 1fr;
@@ -247,7 +247,7 @@ nav a:not([class^="btn"]) {
     gap:29px;
 }
 
-.gallery-show p {
+.gallery-show span {
     margin-bottom: 0; /* 아래쪽 요소와의 간격을 없앰 */
     font-size: 24px;
     font-weight: 700;
@@ -444,18 +444,6 @@ footer::before {
     align-items: left;
 }
 
-@media screen and (max-width: 768px) {
-    .footer-content {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
-
-    .social-links {
-        margin-top: 20px;
-    }
-}
-
 /* 스크롤 탑 버튼 */
 .scroll-top-btn {
     position: fixed;
@@ -511,37 +499,41 @@ footer::before {
     text-align: center;
 }
 
-
-/* 반응형 디자인 */
-@media (max-width: 1024px) {
-    .container {
-        padding: 0 50px;
-    }
-
-    #hero, .feature {
-        flex-direction: column;
-    }
-
-    .hero-image, .feature img {
-        margin-top: 50px;
-    }
-
-    .gallery-grid {
-        grid-template-columns: repeat(2, 1fr);
-    }
+.modal-img {
+    width: 110px;
+    height: 112px;
+    margin-bottom: 24px;
 }
 
-@media (max-width: 768px) {
-    nav ul {
-        display: none;
-    }
+.modal-content p{
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18px;
+    text-align: center;
+    color: #000000;
+    margin-bottom: 38px;
+}
 
-    .gallery-grid {
-        grid-template-columns: 1fr;
-    }
+.modal-content h2{
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 45px;
+    text-align: center;
+    color: #D97652;
+    margin-bottom: 12px;
+}
 
-    .scroll-top-btn {
-        right: 20px;
-        bottom: 20px;
-    }
+.modal-button-box {
+    width: 183px;
+    height: 50px;
+    border-radius: 40px;
+    background: #D97652;
+}
+
+#modal-close {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 20px;
+    text-align: center;
+    color: #fff;
 }
