--- a/css/styles.css
+++ b/css/styles.css
@@ -504,14 +504,17 @@ footer::before {
 .modal-button-box {
     width: 183px;
     height: 50px;
-    border-radius: 40px;
-    background: #D97652;
 }
 
 #modal-close {
+    width: inherit;
+    height: inherit;
     font-size: 16px;
     font-weight: 700;
     line-height: 20px;
-    text-align: center;
+    border-radius: 40px;
+    background: #D97652;
+    border: none;
     color: #fff;
+    cursor: pointer; /* 버튼에도 클릭 가능한 포인터 추가 */
 }
